// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallTrianglePath> <BallTrianglePath> Mount: enzyme.mount 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  transform: translate(-29.994001199760046px, -37.50937734433609px);
  -webkit-transform: translate(-29.994001199760046px, -37.50937734433609px);
}

.css-0> div:nth-child(1),
[data-css-0]> div:nth-child(1) {
  animation-delay: 0;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-name: animation_au0907;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-name: animation_au0907;
  -webkit-animation-timing-function: ease-in-out;
}

.css-0> div:nth-child(2),
[data-css-0]> div:nth-child(2) {
  animation-delay: 0;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-name: animation_99wcyi;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-name: animation_99wcyi;
  -webkit-animation-timing-function: ease-in-out;
}

.css-0> div:nth-child(3),
[data-css-0]> div:nth-child(3) {
  animation-delay: 0;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-name: animation_13149w0;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-name: animation_13149w0;
  -webkit-animation-timing-function: ease-in-out;
}

.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #ffffff;
  animation-fill-mode: both;
  border: 1px solid #ffffff;
  position: absolute;
  -webkit-animation-fill-mode: both;
}

.css-0 > div:nth-of-type(1),
[data-css-0] > div:nth-of-type(1) {
  top: 50px;
}

.css-0 > div:nth-of-type(2),
[data-css-0] > div:nth-of-type(2) {
  left: 25px;
}

.css-0 > div:nth-of-type(3),
[data-css-0] > div:nth-of-type(3) {
  left: 50px;
  top: 50px;
}

<BallTrianglePath
  loading={true}
>
  <div
    data-css-0=""
  >
    <div />
    <div />
    <div />
  </div>
</BallTrianglePath>
`;

exports[`<BallTrianglePath> <BallTrianglePath> Render: enzyme.render 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  transform: translate(-29.994001199760046px, -37.50937734433609px);
  -webkit-transform: translate(-29.994001199760046px, -37.50937734433609px);
}

.css-0> div:nth-child(1),
[data-css-0]> div:nth-child(1) {
  animation-delay: 0;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-name: animation_au0907;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-name: animation_au0907;
  -webkit-animation-timing-function: ease-in-out;
}

.css-0> div:nth-child(2),
[data-css-0]> div:nth-child(2) {
  animation-delay: 0;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-name: animation_99wcyi;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-name: animation_99wcyi;
  -webkit-animation-timing-function: ease-in-out;
}

.css-0> div:nth-child(3),
[data-css-0]> div:nth-child(3) {
  animation-delay: 0;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-name: animation_13149w0;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-name: animation_13149w0;
  -webkit-animation-timing-function: ease-in-out;
}

.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #ffffff;
  animation-fill-mode: both;
  border: 1px solid #ffffff;
  position: absolute;
  -webkit-animation-fill-mode: both;
}

.css-0 > div:nth-of-type(1),
[data-css-0] > div:nth-of-type(1) {
  top: 50px;
}

.css-0 > div:nth-of-type(2),
[data-css-0] > div:nth-of-type(2) {
  left: 25px;
}

.css-0 > div:nth-of-type(3),
[data-css-0] > div:nth-of-type(3) {
  left: 50px;
  top: 50px;
}

<div
  data-css-0=""
>
  <div />
  <div />
  <div />
</div>
`;

exports[`<BallTrianglePath> <BallTrianglePath> Shallow: enzyme.shallow 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  transform: translate(-29.994001199760046px, -37.50937734433609px);
  -webkit-transform: translate(-29.994001199760046px, -37.50937734433609px);
}

.css-0> div:nth-child(1),
[data-css-0]> div:nth-child(1) {
  animation-delay: 0;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-name: animation_au0907;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-name: animation_au0907;
  -webkit-animation-timing-function: ease-in-out;
}

.css-0> div:nth-child(2),
[data-css-0]> div:nth-child(2) {
  animation-delay: 0;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-name: animation_99wcyi;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-name: animation_99wcyi;
  -webkit-animation-timing-function: ease-in-out;
}

.css-0> div:nth-child(3),
[data-css-0]> div:nth-child(3) {
  animation-delay: 0;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-name: animation_13149w0;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-name: animation_13149w0;
  -webkit-animation-timing-function: ease-in-out;
}

.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 10px;
  margin: 2px;
  width: 10px;
  background-color: #ffffff;
  animation-fill-mode: both;
  border: 1px solid #ffffff;
  position: absolute;
  -webkit-animation-fill-mode: both;
}

.css-0 > div:nth-of-type(1),
[data-css-0] > div:nth-of-type(1) {
  top: 50px;
}

.css-0 > div:nth-of-type(2),
[data-css-0] > div:nth-of-type(2) {
  left: 25px;
}

.css-0 > div:nth-of-type(3),
[data-css-0] > div:nth-of-type(3) {
  left: 50px;
  top: 50px;
}

<div
  data-css-0=""
>
  <div />
  <div />
  <div />
</div>
`;
